# sudoku

./: Dockerfile  Sudoku.hs  sudoku.cabal
src/: KenKen.hs  KenKenDecoder.hs  SolverMain.hs  Sudoku.hs
