name:                sudoku
version:             0.1.0.0
license:             GPL-3
license-file:        LICENSE
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable sudoku
  hs-source-dirs:      src
  main-is:             SolverMain.hs
  default-language:    Haskell2010
  build-depends:       base, array, containers, base64-bytestring
